--- a/styles.css
+++ b/styles.css
@@ -90,15 +90,7 @@ body {
 .button.function:hover {
   background: rgba(211, 142, 51, 0.1);}
 
-  
-.media -query {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
-  width: 50%;
-  max-width: 50%;
-  margin: auto;
-}/* Calculator Container */
+/* Calculator Container */
 .calculator {
   width: 100%;
   max-width: 400px;
@@ -131,13 +123,11 @@ button.function:hover {
 }
 
 /* Media Query for Mobile Screens */
-@media (max-width: 605px) {
+@media (max-width:  600px) {
   .calculator {
-    width: 600px;
-    max-width: 100%;
-    height: 100%;
-    min-height: 100%;
+    width: 100%;
     padding: 20px;
+    box-sizing: border-box;
   }
 
   .buttons {
